# bpr-boolean-fhe

./: .gitignore  LICENSE  README.md  requirements.txt
aes/: README.md  aes.ipynb  s_box.txt
aes/graph/: aes.py  circuit.py  formula.py  regularization.py  tree.py
aes/results/: test_z0  test_z1  test_z10  test_z11  test_z12  test_z13  test_z14  test_z15  test_z16  test_z17  test_z2  test_z3  test_z4  test_z5  test_z6  test_z7  test_z8  test_z9  total.txt
aes/search/: search.py  supertuple.py  utils.py
implementation_crypto_primitive_tfhe/: README.md
implementation_crypto_primitive_tfhe/implementations/: Cargo.toml
implementation_crypto_primitive_tfhe/implementations/src/: aes.rs  ascon.rs  main.rs  sha3.rs  simon.rs  symmetric.rs  utils.rs
implementation_crypto_primitive_tfhe/tfhe-0.1.8/: .cargo_vcs_info.json  Cargo.toml  LICENSE  cbindgen.toml
implementation_crypto_primitive_tfhe/tfhe-0.1.8/src/: lib.rs
implementations_crypto_primitive_tfhe/crypto_primitives/: Cargo.toml
implementations_crypto_primitive_tfhe/crypto_primitives/src/: ascon.rs  main.rs  sha3.rs  simon.rs  symmetric.rs
implementations_crypto_primitive_tfhe/crypto_primitives/src/aes/: aes_utils.rs  clear.rs  inner_boyar_sbox.rs  linear_circuit.rs  mod.rs
implementations_crypto_primitive_tfhe/crypto_primitives/src/aes/data/: mixcolumns.txt  mixcolumns2.txt  post_circuit.txt  pre_circuit.txt
search_algorithm/: README.md  applications.ipynb  heuristic.ipynb  search.py  supertuple.py  utils.py
search_algorithm/clear_s_boxes/: ascon_s_boxes_binary.pickle  serpent_s_boxes_binary.pickle
(+25 files in other folders)
