[package]
name = "crypto_primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = {path="../tfhe-rs-odd/tfhe", features= ["gadget", "boolean", "x86_64-unix"]}
colored = "2.0.0"
rayon = "1.7.0"
csv = "1.1"
rand = "0.8.5"
